adding log files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,23 @@ checkScoreAndTweet.log.1
 getPreprintsAndSave.log.1
 preprintdatabase.pickle
 temporary.log
+../checkScoreAndTweet.log.1
+../checkScoreAndTweet.log.2
+../checkScoreAndTweet.log.3
+../checkScoreAndTweet.log.4
+../checkScoreAndTweet.log.5
+../getPreprintsAndSave.log.1
+../getPreprintsAndSave.log.2
+../getPreprintsAndSave.log.3
+../getPreprintsAndSave.log.4
+../getPreprintsAndSave.log.5
+checkScoreAndTweet.log.1
+checkScoreAndTweet.log.2
+checkScoreAndTweet.log.3
+checkScoreAndTweet.log.4
+checkScoreAndTweet.log.5
+getPreprintsAndSave.log.1
+getPreprintsAndSave.log.2
+getPreprintsAndSave.log.3
+getPreprintsAndSave.log.4
+getPreprintsAndSave.log.5
